# slay

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yaml
core/: Cargo.toml
core/src/: analytics.rs  engine.rs  lib.rs  network.rs  traits.rs
core/src/components/: client.rs  load_balancer.rs  mod.rs  server.rs
core/tests/: it.rs  server_proxy_test.rs
core/tests/cases/: determinism.rs  load_balancer.rs  load_balancer_retry.rs  mod.rs  network_physics.rs  process_logic.rs  realism.rs
core/tests/common/: mod.rs
deploy/: nginx.conf
ui/: Cargo.toml  Trunk.toml  index.html
ui/src/: analytics.rs  app.rs  canvas.rs  inspector.rs  main.rs  palette.rs  theme.rs
ui/src/components/: client.rs  load_balancer.rs  mod.rs  server.rs
